# Modelim-ne-Fizike-Modelling-in-Physics

./: 03_oshilatore_jolineare.ipynb  04_chaos_dhe_sistemet_kaotike.ipynb  05_modele_demografike_epidemike_trafiku.ipynb  Exam_1.ipynb  Exam_2.ipynb  Prezenca.md  README.md  Urban_Aerosol_Remote_Sensing_HandsOn_EN_SQ_executed.ipynb  Vleresimi.md
Pjesa_0/: 03_Paradigmat_Metodat_ODE.ipynb
Pjesa_1/: 01_Koncepti_i_Funksionit.ipynb  01_koncepti_i_funksionit.ipynb  02_Nga_Formula_te_Modeli.ipynb  03_Paradigmat_Metodat_ODE.ipynb  04_Modelimi_i_Lekundjeve.ipynb
Pjesa_1/oscillator_prod_python/: README.md
Pjesa_2/: 01_sisteme_lagranzhiane.ipynb  02_animacione_sisteme_dinamike.ipynb
Pjesa_2/Shembuj_Python/biele_manivele_pkg/: README.md  pyproject.toml
Pjesa_2/Shembuj_Python/biele_manivele_pkg/scripts/: run_demo.py
Pjesa_2/Shembuj_Python/biele_manivele_pkg/src/biele_manivele_pkg/: __init__.py  animation.py  cli.py  parameters.py  plotting.py  simulation.py  symbolic_model.py
Pjesa_2/Shembuj_Python/lavjerresi_dyfishte_pkg/: README.md  pyproject.toml
Pjesa_2/Shembuj_Python/lavjerresi_dyfishte_pkg/scripts/: run_demo.py
Pjesa_2/Shembuj_Python/lavjerresi_dyfishte_pkg/src/lavjerresi_dyfishte_pkg/: __init__.py  animation.py  cli.py  parameters.py  plotting.py  simulation.py  symbolic_model.py
Pjesa_3/: 03_oshilatore_jolineare.ipynb
Pjesa_4/: 04_1_sisteme_te_tjera_kaotike.ipynb  04_chaos_dhe_sistemet_kaotike.ipynb  README.md
Pjesa_5/: 05_modele_demografike_epidemike_trafiku.ipynb
Pjesa_6/: 06_algoritme_renditjeje.ipynb
Projekte/: README.md
(+31 files in other folders)
